# supe

./: .env.example  README.md  docker-compose.yml  pyproject.toml
deploy/docker/: Dockerfile
deploy/gunicorn/: gunicorn_conf.py
deploy/nginx/: nginx.conf
deploy/supervisor/: supervisord.conf
migrations/versions/: adcd1f270c6e_user.py  e913047a053e_initial_migrations.py
src/: Makefile  main.py  serve.py
src/api/: urls.py
src/api/v1/role/: controller.py  schemas.py  tests.py  urls.py
src/api/v1/user/: schemas.py  urls.py  user_controller.py
src/apps/auth/: dtos.py  token_service.py
src/apps/invitation/: constants.py
src/apps/role/: dtos.py  repository.py  service.py
src/apps/user/: dtos.py
src/apps/user/commands/: __init__.py  admin_create.py  user_create.py
src/apps/user/repositories/: __init__.py  admin_repository.py  user_repository.py
src/apps/user/services/: encryption_service.py  user_service.py
src/cli/directives/operations/: createadmin.py
src/configs/: databse.py  settings.py
src/configs/development/: settings.py
src/configs/testing/: settings.py
src/lib/: converter.py  dto.py
src/models/: __init__.py  base.py  invitation.py  permission.py  project.py  project_member.py  role.py  user.py  user_permission.py
src/requirements/: base.txt
src/tests/: test_app.py
