[tool.poetry]
name = "sup-back"
version = "0.1.0"
description = ""
authors = ["Omelchenko Michael <socanime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
esmerald = "^3.0.0"
uvicorn = "^0.29.0"
edgy = {extras = ["postgres"], version = "^0.9.2"}
argon2-cffi = "^23.1.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
